// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventSection render 1`] = `
<div>
  <section
    aria-labelledby=":r0:"
    class="event-section-root border-bottom px-4 py-3"
    tabindex="-1"
  >
    <div
      class="align-items-center d-flex justify-content-between"
    >
      <h3
        class="text-8 font-weight-normal"
      >
        <span
          class="text-4"
          id=":r0:"
        >
          Analyze
        </span>
      </h3>
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="Add Event"
          class="dropdown-toggle btn btn-monospaced btn-sm btn-secondary"
          title="Add Event"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-plus"
            role="presentation"
          >
            <use
              href="#plus"
            />
          </svg>
        </button>
      </div>
    </div>
  </section>
</div>
`;

exports[`EventSection render with event 1`] = `
<div>
  <section
    aria-labelledby=":r1:"
    class="event-section-root border-bottom px-4 py-3"
    tabindex="-1"
  >
    <div
      class="align-items-center d-flex justify-content-between"
    >
      <h3
        class="text-8 font-weight-normal"
      >
        <span
          class="text-4"
          id=":r1:"
        >
          Analyze
        </span>
      </h3>
    </div>
    <div
      class="event-container event-list mt-3"
    >
      <div
        class="dropdown"
      >
        <div
          class="chip-root d-flex align-items-center justify-content-between event-chip-root"
        >
          <button
            class="button-root event-name btn btn-unstyled"
            type="button"
          >
            View Article
          </button>
          <button
            aria-label="Close"
            class="button-root remove-button btn btn-unstyled"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-times-circle icon-root"
              role="presentation"
            >
              <use
                href="#times-circle"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </section>
</div>
`;
